--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ go:
   - 1.5.1
 
 addons:
-  artifacts: true
+  artifacts:
     s3_region: "us-west-2"
     paths:
       - $(git ls-files -o | grep ".build/bin" |  tr "\n" ":")
